@@ -30,7 +30,7 @@ public class PubgClientTest {
 
 
     @Test
-    public void testParsingTelemetryApiUsingMatchSamples() throws PubgClientException {
+    void testParsingTelemetryApiUsingMatchSamples() throws PubgClientException {
         PubgClient client = new PubgClient();
 
         // look for sample matches that where started around 6pm UTC
@@ -59,7 +59,7 @@ public class PubgClientTest {
                 .getIncluded()
                 .stream()
                 .filter(i -> i.getId().equals(assetStub.getId()) && i.getType().equals(assetStub.getType()))
-                .collect(Collectors.toList())
+                .toList()
                 .get(0);
     }
 
